# YOLO-MIT

./: pyproject.toml
src/: main.py
src/config/: config.py
src/config/model/: v9-c.json
src/config/task/: inference.yaml
src/model/: module.py  yolo.py
src/tools/: data_augmentation.py  data_loader.py  drawer.py  solver.py
src/utils/: bounding_box_utils.py  model_utils.py  module_utils.py
tests/: conftest.py
tests/test_tools/: test_data_augmentation.py  test_data_loader.py  test_loss_functions.py  test_solver.py
tests/test_utils/: test_bounding_box_utils.py  test_module_utils.py
yolo/: lazy.py
yolo/config/: config.py  general.yaml
yolo/model/: module.py  yolo.py
yolo/tools/: data_augmentation.py  data_conversion.py  data_loader.py  dataset_preparation.py  drawer.py  format_converters.py  loss_functions.py  solver.py
yolo/utils/: bounding_box_utils.py  dataset_utils.py  deploy_utils.py  logger.py  logging_utils.py  model_utils.py  module_utils.py  solver_utils.py
