[project]
name = "yolo"
version = "0.1.0"
# dynamic = ["dependencies"]
description = "Official Implementation of YOLO"
authors = [{ name = "Hao-Tang, Tsui", email = "henrytsui000@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["yolo", "object detection", "computer vision"]
dependencies = [
    "einops",
    "faster-coco-eval",
    "graphviz",
    "hydra-core",
    "lightning",
    "numpy",
    "opencv-python",
    "pillow",
    "pycocotools",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "requests",
    "rich",
    "torch",
    "torchvision",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]
